--- a/.env.example
+++ b/.env.example
@@ -4,10 +4,13 @@ APP_PORT=3000
 PORT=3306
 DB_HOST=127.0.0.1
 DB_USER=root
-DB_PASSWORD=bunnaymao
+DB_PASSWORD=
 DB_NAME=express-showcase-project
 
-JWT_SECRET_TOKEN=secret
+
+JWT_SECRET_ACCESS_TOKEN=secret-token
+JWT_SECRET_REFRESH_TOKEN=secret-refresh
+JWT_RESET_PASSWORD_SECRET=reset-secret
 
 ACCESS_TOKEN_EXPIRY="1d"
 REFRESH_TOKEN_EXPIRY="7d"
@@ -17,9 +20,10 @@ LOCAL_API_URL="http://localhost:3000"
 DEMO_API_URL="https://your-demo-api.com"
 PRODUCTION_API_URL="https://your-production-api.com"
 FRONTEND_URL="http://localhost:4000"
+RESET_PASSWORD_LINK="http://localhost:4000/auth/reset"
 
 MAIL_HOST="sandbox.smtp.mailtrap.io"
 MAIL_PORT=2525
-MAIL_USER="70305aa6a5cdec"
-MAIL_PASSWORD="76acd39a3d8acd"
-MAIL_FROM_ADDRESS="ss@gmail.com"
+MAIL_USER="70323fa6a5cdec"
+MAIL_PASSWORD="76acd39a332acd"
+MAIL_FROM_ADDRESS="test@gmail.com"
