--- a/package.json
+++ b/package.json
@@ -22,14 +22,18 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.4",
     "express": "^4.18.2",
+    "fs": "^0.0.1-security",
+    "handlebars": "^4.7.8",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.9.1",
+    "nodemailer": "^6.9.10",
     "nodemon": "^3.0.3",
     "sequelize": "^6.37.0",
     "validatorjs": "^3.22.1"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
-    "@types/node": "^20.11.17"
+    "@types/node": "^20.11.17",
+    "@types/validatorjs": "^3.15.5"
   }
 }
